<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.android.usdaplantindex.StartupActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_search_by_name"
                android:layout_weight="1"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_edged_w_shadow"
                android:text="@string/button_text_search_by_name" />

            <Button
                android:id="@+id/btn_search_by_species"
                android:layout_weight="1"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_edged_w_shadow"
                android:text="@string/button_text_search_by_species" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_search_by_location"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:background="@drawable/button_edged_w_shadow"
            android:text="@string/button_text_identify" />

        <Button
            android:id="@+id/btn_favorites"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:background="@drawable/button_edged_w_shadow"
            android:text="@string/button_text_favorites" />

        <Button
            android:id="@+id/btn_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_edged_w_shadow"
            android:text="@string/button_text_about" />

    </LinearLayout>

</LinearLayout>
