<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.usdaplantindex.PlantIdentificationActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_margin="12dp"
        android:background="@drawable/shape_w_shadow"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_spinner_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/title_plant_identification_spinner_state"
            android:textColor="@color/colorBrightText"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_state"
            android:layout_margin="12dp"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="20sp"
            android:background="@drawable/spinner_fill_w_shadow" />

        <TextView
            android:id="@+id/tv_spinner_growth_habit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/title_plant_identification_spinner_growth_habit"
            android:textColor="@color/colorBrightText"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_growth_habits"
            android:layout_margin="12dp"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="20sp"
            android:background="@drawable/spinner_fill_w_shadow" />

        <TextView
            android:id="@+id/tv_spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/title_plant_identification_spinner_category"
            android:textColor="@color/colorBrightText"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_margin="12dp"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="20sp"
            android:background="@drawable/spinner_fill_w_shadow" />

        <TextView
            android:id="@+id/tv_spinner_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/title_plant_identification_spinner_duration"
            android:textColor="@color/colorBrightText"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_duration"
            android:layout_margin="12dp"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="20sp"
            android:background="@drawable/spinner_fill_w_shadow" />

       <Button
           android:id="@+id/btn_identify"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="24dp"
           android:layout_marginRight="24dp"
           android:layout_marginBottom="12dp"
           android:layout_marginTop="44dp"
           android:background="@drawable/button_edged_w_shadow"
           android:textSize="20sp"
           android:text="@string/plant_identify_button_text"
           android:textColor="@color/colorBrightText"
           android:textAppearance="@android:style/TextAppearance.Material.Widget.Button.Colored" tools:targetApi="n" />

    </LinearLayout>

 </LinearLayout>
